# Warping-brain-topology

./: 1_Registration_jobfile.pbs  1_Registration_submitter.sh  2_SVF_Mean_jobfile.pbs  2_SVF_Mean_submitter.sh  3_Fast_Resampling_Registration_jobfile.pbs  3_Fast_Resampling_Registration_submitter.sh  4_Mean_jobfile.pbs  4_Mean_submitter.sh  5_Topo_Denoising_jobfile.pbs  5_Topo_Denoising_submitter.sh
BCH_Atlas_t0_guimond/: Diff_SVF_0001_1_p1.2.mha  Diff_SVF_0001_2_p1.2.mha  Diff_SVF_0001_3_p1.2.mha  Diff_SVF_0001_4_p1.2.mha  Diff_SVF_0001_5_p1.2.mha  Diff_SVF_0001_6_p1.2.mha  Diff_SVF_0001_7_p1.2.mha  Diff_SVF_0001_8_p1.2.mha  Diff_SVF_0002_1_p1.2.mha  Diff_SVF_0002_2_p1.2.mha  Diff_SVF_0002_3_p1.2.mha  Diff_SVF_0002_4_p1.2.mha  Diff_SVF_0002_5_p1.2.mha  Diff_SVF_0002_6_p1.2.mha  Diff_SVF_0002_7_p1.2.mha  Diff_SVF_0002_8_p1.2.mha  Diff_SVF_0004_1_p1.2.mha  Diff_SVF_0004_2_p1.2.mha  Diff_SVF_0004_3_p1.2.mha  Diff_SVF_0004_4_p1.2.mha  Diff_SVF_0004_5_p1.2.mha  Diff_SVF_0004_6_p1.2.mha  Diff_SVF_0004_7_p1.2.mha  Diff_SVF_0004_8_p1.2.mha  Diff_SVF_0005_1_p1.2.mha  Diff_SVF_0005_2_p1.2.mha  Diff_SVF_0005_3_p1.2.mha  Diff_SVF_0005_4_p1.2.mha  Diff_SVF_0005_5_p1.2.mha  Diff_SVF_0005_6_p1.2.mha  Diff_SVF_0005_7_p1.2.mha  Diff_SVF_0005_8_p1.2.mha  Diff_SVF_0007_1_p1.2.mha  Diff_SVF_0007_2_p1.2.mha  Diff_SVF_0007_3_p1.2.mha  Diff_SVF_0007_4_p1.2.mha  Diff_SVF_0007_5_p1.2.mha  Diff_SVF_0007_6_p1.2.mha  Diff_SVF_0007_7_p1.2.mha  Diff_SVF_0007_8_p1.2.mha  (+3203 more)
SVFExp/: CMakeCache.txt  CMakeLists.txt  Makefile  SVFExponential  SVFExponential.cxx  cmake_install.cmake
SVFExp2D/: CMakeLists.txt  SVFExponential.cxx
myMean/: CMakeCache.txt  Makefile  bak.myMean  cmake_install.cmake  myMean.cxx
myMean2D/: CMakeLists.txt  myMean.cxx
myMeanVect/: CMakeCache.txt  Makefile  cmake_install.cmake  myMeanVect  myMeanVect.cxx
myMeanVect2D/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  myMeanVect  myMeanVect.cxx  test.mha
myVectDifference/: #ImageVectDifference.cxx#  CMakeCache.txt  CMakeLists.txt  ImageVectDifference  ImageVectDifference.cxx  Makefile  cmake_install.cmake
myVectDifference2D/: CMakeLists.txt  ImageVectDifference.cxx~
mywarpImage_BSpline/: CMakeLists.txt  CMakeLists.txt~  myWarpImage_BSpline.cxx
mywarpImage_BSpline2D/: CMakeLists.txt
